# novel_writer

./: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
docs/: DEV_LOG_2026-04-17.md
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: ai.json  default.json
src-tauri/src/: lib.rs
src/assets/styles/: base.css
src/components/Editor/: AiPanel.vue  ChapterContent.vue  CharPicker.vue  CharSnapshot.vue  EditorToolbar.vue  PlotlinePicker.vue
src/components/Sidebar/: AIPanel.vue  ChapterListPanel.vue  CharsPanel.vue  InfoPanel.vue  OutlinePanel.vue  SidebarTabs.vue
src/components/shared/: AIFeatureModal.vue  AISettingsModal.vue  BookCard.vue  Modal.vue  Toast.vue
src/composables/: useAI.ts  useBooks.ts  useNovel.ts  useTheme.ts
src/themes/: dark.json  eye.json  light.json
src/types/: index.ts
src/views/: EditorView.vue  HomeView.vue
tests/: books.spec.ts
